# original_libs

./: .gitattributes  .gitignore  CONVENTIONS.md  ERRORS.md  README.md  pyproject.toml  rename_package.py  requirements.txt  仕様書.md
.github/workflows/: ci.yml
comken/: __init__.py  config.py  config_stub.py  deprecation.py  exceptions.py  logger.py  runtime.py  utils.py
comken.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
comken/browser/: __init__.py  base_page.py  download.py  driver.py  locator.py  options.py  site_page.py
comken/credentials/: __init__.py  __main__.py  gui.py  store.py
comken/csv/: __init__.py  handler.py  writer.py
comken/excel/: __init__.py  colors.py  handler.py  sheet.py
comken/pdf/: __init__.py  handler.py
comken/salesforce/: __init__.py  api.py  report.py  rest_api.py  simple_sf.py
comken/salesforce_requests/: __init__.py  api.py  bulk.py  simple_sf.py
comken/salesforce_std/: __init__.py  api.py
comken/selenium/: options.py
comken/teams/: __init__.py  webhook.py
comken/utils/: __init__.py  archive.py  data.py  file.py  retry.py  text.py  timer.py  wait.py
comken/windows/: __init__.py  handler.py  process.py
docs/: Salesforce認証パターン.md  コードリーディングガイド.md  ブラウザのクライアント証明書自動選択.md  プロジェクト規約.md  ライブラリ開発規約.md  機能カタログ.md  認証情報の公開鍵配布.md
examples/: README.md
examples/csv_diff_report/: run.py
examples/csv_to_excel_report/: run.py
examples/daily_batch_template/: config.ini.example  run.py
examples/excel_key_transfer/: run.py
examples/salesforce_to_excel/: config.ini.example  config.py  credentials.py  run.py
examples/sample_login/: browser_options.ini.example  browser_options.py  config.ini.example  config.py  run.py
src/: __init__.py  config.py  utils.py
src/csv/: __init__.py  handler.py
src/excel/: __init__.py  handler.py
src/salesforce/: __init__.py  report.py  rest_api.py  simple_sf.py
src/selenium/: __init__.py  base_page.py  (+2 more)
templates/: リリース.bat  初回セットアップ.bat  実行.bat  認証情報の登録.bat
tests/: test_browser_driver.py  test_config.py  test_credentials.py  test_credentials_gui.py  test_csv.py  test_docs_code.py  test_examples.py  test_excel.py  test_exceptions.py  test_logger.py  test_pdf.py  test_rename_package.py  test_runtime.py  test_salesforce_api.py  test_teams.py  test_utils.py  test_utils_extra.py
(+23 files in other folders)
