[project]
name = "comken"
version = "0.2.0"
description = "業務自動化共通ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "selenium>=4.0",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
# salesforce_requests（requests 版クライアント）を使う場合のみ
# （salesforce_std の SalesforceApiClient は追加インストール不要）
salesforce = ["simple-salesforce>=1.12", "requests>=2.28"]
# comken.pdf（PDF の結合・分割・テキスト抽出）を使う場合のみ
pdf = ["pypdf>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["comken*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
