[project]
name = "comken"
# バージョンは comken/__init__.py の __version__ が唯一の定義（2箇所更新を防ぐ）
dynamic = ["version"]
description = "業務自動化共通ライブラリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1",
    "selenium>=4.0",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
# salesforce を使う場合のみ（OAuth 2.0 クライアントクレデンシャル）
salesforce = ["requests>=2.28"]
# comken.pdf（PDF の結合・分割・テキスト抽出）を使う場合のみ
pdf = ["pypdf>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "comken.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["comken*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
